Try to prevent selections inside ref/template nodes on Firefox
As shown on T327086, Firefox allows selections to partially cover
non-editable nodes, like references and templates, which our data
model does not allow.

Adding `user-select: all` to these nodes makes sense per the spec [1],
improves the selection behavior on Firefox and doesn't seem to cause
issues in other browsers.
[1] https://w3c.github.io/csswg-drafts/css-ui/#valdef-user-select-all

The other bugs may not be completely fixed, but they behave better
most of the time. We might need to dig deeper into them...

Bug: T272207
Bug: T313162
Bug: T327086

--- a/src/ce/styles/nodes/ve.ce.FocusableNode.css
+++ b/src/ce/styles/nodes/ve.ce.FocusableNode.css
@@ -8,10 +8,6 @@
 	cursor: default;
 }
 
-/* We previously applied -moz-user-select: none to all descendants of focuasbleNode
-   to prevent them from ever taking a cursor (T70537) but that causes FF to create
-   multi-range selections (T214976) which is worse */
-
 .ve-ce-focusableNode-highlight {
 	background: #6da9f7;
 	box-shadow: inset 0 0 0 1px #4c76ac;
